Fri Sep 24 22:35:25 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	From Robert S. Iakobashvili <roberti at go-WLAN dot com> and
	Gonzalo A. Diethelm <gonzalo dot diethelm at aditiva dot com>:

	* ace/ICMP_Socket.cpp:
	* ace/ICMP_Socket.h:
	* ace/ICMP_Socket.inl:
	* ace/Ping_Socket.cpp:
	* ace/Ping_Socket.h:
	* ace/Ping_Socket.inl:
	* tests/Network_Adapters_Test.cpp:
	* tests/Network_Adapters_Test.h:

	  New ICMP and "ping" support, and accompanying test.

	* ace/ace.mpc:
	* tests/tests.mpc:

	  Added new ICMP and "ping" source files to the appropriate
	  source lists.

Fri Sep 24 13:16:44 MST 2004  Trevor Fields  <fields_t@ociweb.com>

        * bin/tao_other_tests.lst:
          Added new ImplRepo tests.

Fri Sep 24 11:07:03 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/ACE.h:
	* ace/ACE_crc32.cpp:
	* ace/ACE_crc_ccitt.cpp:

	  Changed the buffer and iovec versions of ACE::crc32() and
	  ACE_crc_ccitt() family of functions to take an additional
	  initial/partial crc argument.  This allows CRCs to be computed
	  over multiple buffers/iovecs by passing the result as input to
	  the next call.  The default value allows callers to omit the
	  argument on the first call.

Fri Sep 24 12:39:31 2004  Carlos O'Ryan  <coryan@atdesk.com>

	* build/Linux/include/makeinclude/platform_linux.GNU:
	  Provide reasonable defaults for Boost.Test

	* bin/MakeProjectCreator/config/boost_unit_test.mpb:
	  Different sites may have different configurations for boost,
	  made the options needed to compile with it configurable via the
	  platform_macros.GNU file.

Fri Sep 24 10:21:38 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * performance-tests/Server_Concurrrency/Leader_Follower/RT_CORBA_Leader_Follower.cpp:

          Replaced ACE_UINT64_DBLCAST_ADAPTER, which doesn't satisfy
          the stricter MSVC 7.1, with static_cast<double>.

Fri Sep 24 10:55:34 2004  Steve Huston  <shuston@riverace.com>

	* ace/config-linux-common.h: If __USE_POSIX199309 is defined from