@@ -1,3 +1,10 @@
+Sun Sep 26 10:07:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/ACE_crc32.cpp:
+        * ace/ACE_crc_ccitt.cpp:
+          Removed trailing ; after namespace closure, fixes Tru64 build
+          warning
+
 Fri Sep 24 22:35:25 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	From Robert S. Iakobashvili <roberti at go-WLAN dot com> and
